// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CollapsibleAssessment /> renders the component 1`] = `
<Collapsible
  onToggle={[Function]}
  open={true}
  title={
    <h3>
      Step Label grade:
      5 / 10
    </h3>
  }
>
  <div>
    Children
  </div>
</Collapsible>
`;

exports[`<CollapsibleAssessment /> renders without props 1`] = `
<Collapsible
  onToggle={[Function]}
  open={false}
  title={
    <h3>
      Submitted assessment
    </h3>
  }
>
  <div>
    Children
  </div>
</Collapsible>
`;
